[gd_scene load_steps=6 format=3 uid="uid://cop7xblcpkud5"]

[ext_resource type="Script" uid="uid://fb8rciqakfyc" path="res://content/enemy/gustbloom/enemy_gustbloom.gd" id="1_3j7qb"]
[ext_resource type="Texture2D" uid="uid://c84nflhkhabes" path="res://assets/sprites/enemy/swirler.png" id="1_mtd4w"]
[ext_resource type="Script" uid="uid://bog6bqfmnioad" path="res://multi_scripts/hit_box.gd" id="2_3j7qb"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tlyem"]
radius = 0.9711914
height = 3.1152344

[sub_resource type="CylinderShape3D" id="CylinderShape3D_oh5ey"]
height = 1.1518631
radius = 1.1206055

[node name="EnemyGustbloom" type="Node3D"]
script = ExtResource("1_3j7qb")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5881426, 0)
pixel_size = 0.05
billboard = 2
texture_filter = 0
texture = ExtResource("1_mtd4w")

[node name="HitBox" type="Area3D" parent="."]
script = ExtResource("2_3j7qb")
metadata/_custom_type_script = "uid://bog6bqfmnioad"

[node name="BodyShape" type="CollisionShape3D" parent="HitBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5928779, 0)
shape = SubResource("CapsuleShape3D_tlyem")

[node name="FlowerShape" type="CollisionShape3D" parent="HitBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.4068654, 0)
shape = SubResource("CylinderShape3D_oh5ey")
debug_color = Color(0.7987184, 0.044899873, 0.99999994, 0.41960785)

[node name="VerticalGusts" type="Node3D" parent="."]

[node name="SpiralGusts" type="Node3D" parent="."]
